styles/queries.css
/**************************/
/* BELOW 1200px (Laptops) */
/**************************/

@media (max-width: 75em) {
  .container {
    padding: 0 1rem;
  }

  .hero-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3rem;
    margin-bottom: 8rem;
  }

  .hero-form {
    margin: 0 1rem;
  }

  .act-quick--section {
    align-items: center;
    flex-direction: column-reverse;
    justify-content: center;
  }

  .act-quick--section div {
    width: 100%;
    text-align: center;
  }

  .act-quick--section img {
    width: 100%;
  }

  .act-quick--section h2 {
    max-width: 100rem;
  }

  .act-quick--section p {
    max-width: 100rem;
  }

  .act-list {
    display: flex;
    align-items: center;
  }

  .features-section {
    padding: 4rem;
  }

  .features-title {
    font-size: 3.2rem;
    line-height: 3.2rem;
    font-weight: 800;
    text-align: center;
    margin-bottom: 4.8rem;
  }

  .features {
    grid-template-columns: repeat(2, 1fr);
    gap: 6rem;
  }

  .chances-boxes {
    display: flex;
    flex-direction: column;
  }

  .chance-title {
    text-align: center;
  }

  /*  */
  .submit-button {
    margin: 0 auto;
  }

  .section-title {
    font-size: 2.4rem;
  }

  .section-subtitle {
    font-size: 1.8rem;
  }

  .footer-section ul {
    flex-direction: column;
    gap: 1.2rem;
  }
}

